--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Comedies'
 - !lcc 'PR'
 - !lcsh 'Exiles -- Drama'
+- GITenberg
 title: Kaksi nuorta veronalaista
 url: http://www.gutenberg.org/ebooks/44839
